# isaaclab-soarm-101

./: .aider.chat.history.md  .aider.conf.yml  .aider.input.history  .aider.model.metadata.json  .claudeignore  .gitignore  CLAUDE.md  README.md  pyproject.toml
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
.claude/agents/: bug-fixer.md  git-manager.md  ruff-fixer.md  test-fixer.md
docs/: check-after-scaffold.md  tasktrail  tutorials
scripts/environments/: list_envs.py
source/so_arm101_block/: __init__.py
source/so_arm101_block/agents/: __init__.py  rsl_rl_ppo_cfg.py
source/so_arm101_block/robots/: __init__.py  so_arm101.py
source/so_arm101_block/tasks/: __init__.py
source/so_arm101_block/tasks/block/: __init__.py  block_env_cfg.py
source/so_arm101_block/tasks/block/mdp/: __init__.py  events.py  observations.py  rewards.py  terminations.py
