[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "so-arm101-block"
version = "0.0.0"
description = "SO-ARM101 stick-blocking external Isaac Lab project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.packages.find]
where = ["source"]
include = ["so_arm101_block*"]
