[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "so-arm101-block"
version = "0.0.0"
description = "SO-ARM101 stick-blocking external Isaac Lab project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "isaaclab",
  "isaaclab_rl",
  "isaaclab_tasks",
  "isaacsim",
  "torch==2.7.0",
  "torchvision==0.22.0",
  "gymnasium",
]

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.packages.find]
where = ["source"]
include = ["so_arm101_block*"]

[tool.uv.extra-build-dependencies]
flatdict = ["setuptools"]

[tool.uv.sources]
isaaclab = { path = "../IsaacLab/source/isaaclab", editable = true }
isaaclab_rl = { path = "../IsaacLab/source/isaaclab_rl", editable = true }       # Changed to underscore
isaaclab_tasks = { path = "../IsaacLab/source/isaaclab_tasks", editable = true } # Changed to underscore
isaacsim = { index = "nvidia" }

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"